# Interpolenta

./: CMakeLists.txt  README.md
Interpolenta/: Interpolenta  Utils
cmake/: Eigen.cmake  ROOTSetup.cmake
test/: sintest.cxx
